--- a/App/templates/producto/altaProducto.html
+++ b/App/templates/producto/altaProducto.html
@@ -9,14 +9,14 @@
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}
 
-            <div class="container-fluid">
-                <h2>Alta producto</h2>
+            <div class="container-fluid" style="margin-top: 70px;">
+                <h2>Nuevo producto</h2>
                 <form action="guardarProducto" method="POST" enctype="multipart/form-data">
 
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="nombre">Nombre del Producto</label>
+                                <label for="nombre">Nombre del producto</label>
                                 <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del producto">
                             </div>
                         </div>
@@ -46,7 +46,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="garantia">Garantía (Meses)</label>
+                                <label for="garantia">Meses de garantía</label>
                                 <select name="garantia" class="custom-select">
                                     <option value="0"> 0 </option>
                                     <option value="3"> 3  </option>
@@ -101,7 +101,7 @@
 
                     </div>
                     <button type="submit" class="btn btn-primary">Aceptar</button>
-                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                    <a class="btn btn-danger" href="/productoABMC" role="button">Cancelar</a>
                 </form>
             </div>
         </div>
