--- a/App/templates/marca/modificarMarca.html
+++ b/App/templates/marca/modificarMarca.html
@@ -9,8 +9,8 @@
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}
 
-            <div class="container p-2">
-                <h2>Modificar marca</h2>
+            <div class="container p-2" style="margin-top: 70px;">
+                <h2>Modificación de marca</h2>
                 <form action="{{ url_for('editarMarca')}}" method="POST">
                     <div class="form-group">
                         <label for="nombre">Nombre de la marca a modificar</label>
@@ -18,17 +18,15 @@
                     </div>
                     <div class="form-group">
                         <label for="nombreNuevo">Nuevo nombre de la marca</label>
-                        <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar nuevo nombre de la marca">
+                        <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre de la marca">
                     </div>
                     <button type="submit" class="btn btn-primary">Aceptar</button>
-                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                    <a class="btn btn-danger" href="/marcaABMC" role="button">Cancelar</a>
                 </form>
             </div>
-            {% include 'footer/footer.html' %}
         </div>
-
     </div>
-
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
