--- a/App/templates/navbars/sidebar.html
+++ b/App/templates/navbars/sidebar.html
@@ -39,12 +39,13 @@
     <a href="/"> <img src="..\static\img\banner.png" height="58px"> </a>
     <div class="list-group list-group-flush">
         <a href="{{ url_for('usuarioABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Usuarios <i class="fas fa-angle-right"></i> </a>
-        <a href="{{ url_for('tipoProductoABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-laptop"></i> Tipo de Productos <i class="fas fa-angle-right"></i></a>
+        <a href="{{ url_for('tipoProductoABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-laptop"></i> Tipos de Productos <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('marcaABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-copyright"></i> Marcas <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('productoABMC') }}" class="list-group-item list-group-item-action bg-light"> <i class="fab fa-product-hunt"></i> Productos<i class="fas fa-angle-right"></i></a>
         <!--<a href="#" class="list-group-item list-group-item-action bg-light">----</a>-->
         <!--<li class="nav-item dropdown">-->
-        <a class="list-group-item list-group-item-action bg-light  dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+        <!-- <a class="list-group-item list-group-item-action bg-light  dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i> Ejemplar ABMC
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -55,7 +56,8 @@
             <a class="dropdown-item" href="{{ url_for('modificarEjemplar') }}">Modificaión</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{{ url_for('listarEjemplar') }}">Consulta(Lista)</a>
-        </div>
+        </div> -->
+
         <!--</li>-->
         <a href="{{ url_for('comboABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('ventas') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-shopping-cart"></i> Ventas <i class="fas fa-angle-right"></i></a>
@@ -66,8 +68,8 @@
                     <ul>
                         <li><a>  </a></li>
                         <li style="width: 110px;"><a href="{{ url_for('rolABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-users"></i> Roles <i class="fas fa-angle-right"></i> </a></li>
-                        <li><a href="#">Servicio B</a></li>
-                        <li><a href="#">Servicio C</a></li>
+                        <!-- <li><a href="#">Servicio B</a></li>
+                        <li><a href="#">Servicio C</a></li> -->
                     </ul>
                 </li>
             </ul>
