--- a/App/templates/producto/modificarProducto.html
+++ b/App/templates/producto/modificarProducto.html
@@ -8,13 +8,13 @@
 
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}
-            <div class="container p-2">
-                <h2>Modificar producto</h2>
+            <div class="container p-2" style="margin-top: 70px;">
+                <h2>Modificación del producto</h2>
                 <form action="{{ url_for('editarProducto')}}" method="POST">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="nuevoNombre">ID Producto</label>
+                                <label for="nuevoNombre">ID del producto</label>
                                 <input readonly value="{{data['producto'][0]}}" type="text" class="form-control" name="idProd" id="idProd" placeholder="Ingresar nombre del producto">
                             </div>
                         </div>
@@ -77,7 +77,7 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="contactoNuevo">Tipo de Producto</label>
+                                <label for="contactoNuevo">Tipo de producto</label>
                                 <select name="nuevoTipoProducto" class="custom-select">
                             {% for e in data['tipo_producto'] %}
                                 {% if data['producto'][7] == e[1] %}
@@ -103,7 +103,7 @@
                     </div>
 
                     <button type="submit" class="btn btn-primary">Aceptar</button>
-                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                    <a class="btn btn-danger" href="/productoABMC" role="button">Cancelar</a>
                 </form>
             </div>
         </div>
