--- a/App/templates/rol/modificarRol.html
+++ b/App/templates/rol/modificarRol.html
@@ -9,15 +9,15 @@
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}
             <div class="container p-2">
-                <h2>Modificar Rol</h2>
+                <h2>Modificación de rol</h2>
                 <form action="{{ url_for('editarRol') }}" method="POST">
                     <div class="form-group">
                         <label for="nombreRol">Nombre del rol a modificar</label>
                         <input readonly value="{{data[0][1]}}" type="text" class="form-control" name="nombreRol" id="nombreRol" placeholder="ingresar nombre del rol">
                     </div>
                     <div class="form-group">
-                        <label for="nombreNuevoRol">Nuevos Nombre del rol</label>
-                        <input type="text" class="form-control" name="nombreNuevoRol" id="nombreNuevoRol" placeholder="ingresar nombre del rol">
+                        <label for="nombreNuevoRol">Nuevo nombre del rol</label>
+                        <input type="text" class="form-control" name="nombreNuevoRol" id="nombreNuevoRol" placeholder="Ingresar nombre del rol">
                     </div>
                     <button type="submit" class="btn btn-primary">Aceptar</button>
                     <a class="btn btn-danger" href="/" role="button">Cancelar</a>
