--- a/App/templates/tipoProducto/altaTipoProducto.html
+++ b/App/templates/tipoProducto/altaTipoProducto.html
@@ -3,20 +3,28 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar_admin.html' %}
-    <div class="container p-2">
-        <h2>Alta tipo de producto</h2>
-        <form action="guardarTipoProducto" method="POST">
-            <div class="form-group">
-                <label for="nombre">Nombre del tipo de producto</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del tipo">
-            </div>
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
-        </form>
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
 
+                <div class="container p-2" style="margin-top: 70px;">
+                    <h2>Nuevo tipo de producto</h2>
+                    <form action="guardarTipoProducto" method="POST">
+                        <div class="form-group">
+                            <label for="nombre">Nombre del tipo de producto</label>
+                            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del tipo">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Aceptar</button>
+                        <a class="btn btn-danger" href="/tipoProductoABMC" role="button">Cancelar</a>
+                    </form>
+                </div>
 
+        </div>
     </div>
+
+    {% include 'footer/footer.html' %} 
+
 </body>
 
 </html>
