--- a/App/templates/tipoProducto/modificarTipoProducto.html
+++ b/App/templates/tipoProducto/modificarTipoProducto.html
@@ -3,24 +3,28 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar_admin.html' %}
-    <div class="container p-2">
-        <h2>Modificar tipo de producto</h2>
-        <form action="{{ url_for('editarTipoProducto') }}" method="POST">
-            <div class="form-group">
-                <label for="nombre">Nombre Actual del tipo de producto a modificar</label>
-                <input readonly type="text" class="form-control" name="nombre" id="nombre" value="{{ data[1] }}">
-            </div>
-            <div class="form-group">
-                <label for="nombreNuevo">Nuevo nombre del tipo de producto</label>
-                <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del tipo de producto">
-            </div>
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
-        </form>
-
-
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
+                <div class="container p-2" style="margin-top: 70px;">
+                    <h2>Modificación del tipo de producto</h2>
+                    <form action="{{ url_for('editarTipoProducto') }}" method="POST">
+                        <div class="form-group">
+                            <label for="nombre">Nombre actual del tipo de producto a modificar</label>
+                            <input readonly type="text" class="form-control" name="nombre" id="nombre" value="{{ data[1] }}">
+                        </div>
+                        <div class="form-group">
+                            <label for="nombreNuevo">Nuevo nombre del tipo de producto</label>
+                            <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del tipo de producto">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Aceptar</button>
+                        <a class="btn btn-danger" href="/tipoProductoABMC" role="button">Cancelar</a>
+                    </form>
+                </div>
+        </div>
     </div>
+    {% include 'footer/footer.html' %} 
 </body>
 
 </html>
