--- a/App/templates/tipoProducto/tipoProductoABMC.html
+++ b/App/templates/tipoProducto/tipoProductoABMC.html
@@ -67,10 +67,10 @@
                 </div>
                 {%endif%}
 
-                <div class="row">
+                <div class="row" style="margin-top: 70px;">
                     <div class="col-lg-12 p-2">
 
-                        <h1 class="display-5">Tipo de Producto</h1>
+                        <h1 class="display-5">Tipos de productos</h1>
                         <hr class="my-4">
                         <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaTipoProducto') }}"><i class="far fa-plus-square"></i> Nuevo</a>
 
@@ -96,7 +96,7 @@
                 width: "20"
             }, {
                 field: "tipo",
-                title: "Tipo de Producto",
+                title: "Tipo de producto",
                 sortable: true,
                 width: "30"
             },
