--- a/App/templates/usuario/modificarUsuario.html
+++ b/App/templates/usuario/modificarUsuario.html
@@ -8,11 +8,11 @@
 
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}
-            <div class="container p-2">
-                <h2>Modificar Usuario</h2>
+            <div class="container p-2" style="margin-top: 70px;">
+                <h2>Modificación de usuario</h2>
                 <form action="{{ url_for('editarUsuario') }}" method="POST">
                     <div class="form-group">
-                        <label for="nombre">Nombre del usuario a modificar</label>
+                        <label for="nombre">Email del usuario a modificar</label>
                         <input readonly value="{{data['email']}}" type="email" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del usuario">
                     </div>
                     <!--<div class="form-group">
@@ -21,7 +21,7 @@
                     </div>-->
                     <div class="form-group">
                         <label for="contraseniaNueva">Nueva contraseña del usuario</label>
-                        <input type="password" class="form-control" name="contraseniaNueva" id="contraseniaNueva" placeholder="Ingresar la nueva contrasenia del usuario">
+                        <input type="password" class="form-control" name="contraseniaNueva" id="contraseniaNueva" placeholder="Ingresar la nueva contrasenña del usuario">
                     </div>
                     <div class="form-group">
                         <label for="contactoNuevo">Contacto del usuario</label>
@@ -29,7 +29,7 @@
 
                     </div>
                     <div class="form-group">
-                        <label for="contactoNuevo">Rol</label>
+                        <label for="contactoNuevo">Rol de usuario</label>
                         <select name="NuevoRol" class="custom-select">
                             {% for e in data['roles'] %}
                                 {% if data['rolUsario'] == e[0] %}
@@ -42,7 +42,7 @@
                     </div>
 
                     <button type="submit" class="btn btn-primary">Aceptar</button>
-                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                    <a class="btn btn-danger" href="/usuarioABMC" role="button">Cancelar</a>
                 </form>
 
 
