--- a/App/templates/usuario/usuarioABMC.html
+++ b/App/templates/usuario/usuarioABMC.html
@@ -22,10 +22,10 @@
                     </div>
                 </div>
                 {%endif%}
-                <div class="row">
+                <div class="row" style="margin-top: 70px;">
                     <div class="col-lg-12 p-2">
 
-                        <h1 class="display-5">Usuario</h1>
+                        <h1 class="display-5">Usuarios</h1>
                         <hr class="my-4">
                         <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaUsuario') }}"><i class="far fa-plus-square"></i> Nuevo</a>
 
