--- a/App/templates/usuario/usuarioGuardado.html
+++ b/App/templates/usuario/usuarioGuardado.html
@@ -2,13 +2,43 @@
 <html lang="en">
 {% include 'header/header.html' %}
 
+<head>
+    <title>Usuario guardado</title>
+    <style>
+        .mensaje{
+            display:block;
+            margin:auto;
+            text-align: center;
+            font-size: 30px;
+            margin-top: 120px;
+        }
+        .boton{
+            display:block;
+            margin:auto;
+            text-align: center;
+            font-size: 20px;
+            margin-top: 40px;
+        }
+    </style>
+</head>
+
 <body>
-    {% if verificador == [] %}
-    <h2>Usuario dado de alta!</h2>
-    {% else %}
-    <h2>El usuario ya existe</h2>
-    {% endif %}
-    <a href="/usuarioABMC"> volver </a>
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
+
+                {% if verificador == [] %}
+                <div class="mensaje">Usuario dado de alta</div>
+                {% else %}
+                <div class="mensaje">El usuario ya existe</div>
+                {% endif %}
+                <a class="boton" href="/usuarioABMC"> Volver </a>
+
+        </div>
+
+    </div>
 </body>
 
 </html>
