--- a/App/templates/usuario/usuarioModificado.html
+++ b/App/templates/usuario/usuarioModificado.html
@@ -2,13 +2,40 @@
 <html lang="en">
 {% include 'header/header.html' %}
 
+<head>
+    <title>Usuario modificado</title>
+    <style>
+        .mensaje{
+            display:block;
+            margin:auto;
+            text-align: center;
+            font-size: 30px;
+            margin-top: 120px;
+        }
+        .boton{
+            display:block;
+            margin:auto;
+            text-align: center;
+            font-size: 20px;
+            margin-top: 40px;
+        }
+    </style>
+</head>
+
 <body>
-    {% if data == [] %}
-    <h2>Usuario Modificado!</h2>
-    {% else %}
-    <h2>Usuario No Existe!</h2>
-    {% endif %}
-    <a href="/usuarioABMC"> volver </a>
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
+
+                <div class="mensaje">Usuario modificado</div>
+
+                <a class="boton" href="/usuarioABMC"> Volver </a>
+
+        </div>
+
+    </div>
 </body>
 
 </html>
