Se cargan nuevos productos y sus imágenes a la bbdd. En en formulario de alta de productos se agrega delimitador de caracteres para la descripción y la obligatoriedad de completar el nombre y el precio

--- a/App/templates/producto/altaProducto.html
+++ b/App/templates/producto/altaProducto.html
@@ -17,13 +17,13 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="nombre">Nombre del producto</label>
-                                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del producto">
+                                <input type="text" class="form-control" required name="nombre" id="nombre" placeholder="Ingresar el nombre del producto">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="descripcion">Descripcion del producto</label>
-                                <input type="text" class="form-control" name="descripcion" id="descripcion" placeholder="Ingresar la descripcion del producto">
+                                <input type="text" class="form-control" name="descripcion" id="descripcion" placeholder="Ingresar la descripcion del producto" maxlength="150">
                             </div>
                         </div>
                     </div>
@@ -32,7 +32,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="precio">Precio del producto</label>
-                                <input type="number" class="form-control" name="precio" id="precio" placeholder="Ingresar el precio del producto">
+                                <input type="number" class="form-control" required name="precio" id="precio" placeholder="Ingresar el precio del producto">
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -107,6 +107,8 @@
         </div>
     </div>
     {% include 'footer/footer.html' %}
+
+    
 </body>
 
 </html>
