--- a/App/templates/combo/comboABMC.html
+++ b/App/templates/combo/comboABMC.html
@@ -46,7 +46,7 @@
                 {%endif%}
                 <div class="row">
                     <div class="col-12 p-2">
-                        <h1 class="display-5">Combos</h1>
+                        <h1 class="display-5" style="padding-top: 70px;">Combos</h1>
                         <hr class="my-4">
                         <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaCombo') }}"><i class="far fa-plus-square"></i> Nuevo</a>
 
@@ -68,22 +68,22 @@
             field: "id",
             title: "ID",
             sortable: true,
-            width: "20"
+            width: "10"
         }, {
             field: "nombre",
             title: "Nombre",
             sortable: true,
-            width: "30"
+            width: "220"
         }, {
             field: "total",
             title: "Total",
             sortable: true,
-            width: "30"
+            width: "80"
         }, {
             field: "descuento",
             title: "Descuento",
             sortable: true,
-            width: "30"
+            width: "15"
         }, {
             field: "totalConDescuento",
             title: "Total con descuento",
@@ -92,7 +92,7 @@
         }, {
             field: 'operate',
             title: 'Acciones',
-            width: "150",
+            width: "200",
             // align: 'center',
             //valign: 'middle',
             clickToSelect: false,
