--- a/App/templates/combo/modificarCombo.html
+++ b/App/templates/combo/modificarCombo.html
@@ -2,6 +2,23 @@
 <html lang="en">
 {% include 'header/header.html' %}
 
+<head>
+    <title>Modificacion del combo</title>
+    <style>
+        .btn-ej{
+        background-color: #18BC9C;
+        font-size: 20px;
+        margin-right:5px;
+        margin-left:5px;
+        margin-bottom:15px;
+        margin-top: 5px;
+        border: none;
+        color:whitesmoke;
+        }
+
+    </style>
+</head>
+
 <body>
 
     <div class="d-flex" id="wrapper">
@@ -23,6 +40,9 @@
                         <label for="nombreNuevo">Nuevo nombre del combo</label>
                         <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Nuevo nombre del combo">
                     </div>
+                    <div></div>
+                    <a href="{{ url_for('editarProductosDelCombo')}}/{{id}}" class="btn btn-ej">Modificar los productos del combo</a>
+                    <div></div>
                     <button type="submit" class="btn btn-primary">Aceptar</button>
                     <a class="btn btn-danger" href="/" role="button">Cancelar</a>
                 </form>
@@ -33,7 +53,7 @@
     </div>
 
 
-<!--     {% include 'navbars/navbar.html' %}
+<!-- 
     <div class="container p-2">
         <h2>Modificar combo</h2>
         <form action="editarCombo" method="POST">
