--- a/App/templates/usuario/modificarUsuario.html
+++ b/App/templates/usuario/modificarUsuario.html
@@ -21,7 +21,7 @@
                     </div>-->
                     <div class="form-group">
                         <label for="contraseniaNueva">Nueva contraseña del usuario</label>
-                        <input type="password" class="form-control" name="contraseniaNueva" id="contraseniaNueva" placeholder="Ingresar la nueva contrasenña del usuario">
+                        <input value="{{data['contrasenia']}}" type="password" class="form-control" name="contraseniaNueva" id="contraseniaNueva" placeholder="Ingresar la nueva contrasenña del usuario">
                     </div>
                     <div class="form-group">
                         <label for="contactoNuevo">Contacto del usuario</label>
