Se realizan pruebas de compras y pagos y se corrigen los errores encontrados

--- a/App/templates/cliente/faq-nolog.html
+++ b/App/templates/cliente/faq-nolog.html
@@ -55,7 +55,7 @@
                 </details>
 
                 <details>
-                    <summary>¿Se permite evoluciones?</summary>
+                    <summary>¿Se permite devoluciones?</summary>
                     <p>Si, en caso de no estar conforme con el producto, comunicarse al correo ventas@gmail.com.</p>
                 </details>
 
