--- a/App/templates/combo/listadoCombo.html
+++ b/App/templates/combo/listadoCombo.html
@@ -84,7 +84,8 @@
                                         <input value="{{dato[0]}}" type="hidden" class="form-control" name="id" id="id">
                                         <button class="cliqueable" type="submit">
                                             <div class="card-img">
-                                                <img src="https://w7.pngwing.com/pngs/338/779/png-transparent-drawing-personal-computer-desktop-computers-computer-angle-furniture-rectangle.png" style="border-radius: 20px" width="150" height="200" alt="Ver detalles">
+                                                <img src="..\static\img\combo.png" style="border-radius: 20px" width="180" height="200" alt="Ver detalles">
+                                                <!-- <img src="https://w7.pngwing.com/pngs/338/779/png-transparent-drawing-personal-computer-desktop-computers-computer-angle-furniture-rectangle.png" style="border-radius: 20px" width="150" height="200" alt="Ver detalles"> -->
                                             </div>
                                         </button>
                                     </form>
