--- a/App/templates/compra/detalleCompra.html
+++ b/App/templates/compra/detalleCompra.html
@@ -81,6 +81,10 @@
             width: 200px;
             margin-left: 20px;
         }
+        .verProducto{
+            border:none;
+            background-color: transparent;
+        }
     </style>
 </head>
 
@@ -104,7 +108,7 @@
                         <td style="text-align:left;padding-left: 10px;">{{ ejemplar[4] }}</td>
                         <td>${{ ejemplar[9] }}</td>
                         <td class="botones">
-                            <form action="fichaProducto" method="POST">
+                            <form action="verProducto" method="POST">
                                 <div>
                                     <input value="{{ejemplar[3]}}" type="hidden" class="form-control" name="id" id="id">
                                     <button class="verProducto" type="submit"><i class="fa fa-eye" aria-hidden="true"></i></button>
