--- a/App/templates/usuario/miCuenta.html
+++ b/App/templates/usuario/miCuenta.html
@@ -9,13 +9,13 @@
             width: 400px;
             height: 400px;
             margin-top: 100px;
-            background-color: black;
+            background-color: #ebf3f3;
             border-radius: 20px;
         }
         .titulo{
             text-align: center;
             font-size: 30px;
-            color: blanchedalmond;
+            color: black;
             padding-top: 20px;
             padding-bottom: 20px;
             font-style: italic;
@@ -26,18 +26,17 @@
             width: 300px;
             height: 300px;
             background-color: transparent;
-            color: burlywood;
+            color: #8797a3;
             font-size: 18px;
         }
         .btn-ej{
             background-color: white;
             font-size: 20px;
             padding: 5px 5px 5px 5px;
-            margin-top: 60px;
+            margin-top: 20px;
             border: none;
             border-radius: 5px;
-            color:burlywood;
-            width: 280px;
+            color:#8797a3;
         }
     </style>
 </head>
@@ -54,7 +53,7 @@
                 <div class="titulo"> Mi cuenta </div>
                 <div class="cuerpo">
                     Email: {{session['email']}}
-                    <div style="margin-top: 150px;text-align: center;">
+                    <div style="margin-top: 30px;">
                         <a href="{{ url_for('cambiarContrasenia')}}/{{session['email']}}" class="btn-ej">Cambiar contraseña</a>
                     </div>
                 </div>
