--- a/App/templates/navbars/sidebar.html
+++ b/App/templates/navbars/sidebar.html
@@ -61,20 +61,19 @@
         <!--</li>-->
         <a href="{{ url_for('comboABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('ventas') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-shopping-cart"></i> Ventas <i class="fas fa-angle-right"></i></a>
+        <a href="{{ url_for('administracion') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-cog"></i> Administración <i class="fas fa-angle-right"></i></a>
         
-        <nav>
+        <!-- <nav>
             <ul>
                 <li style="height: 150px;"><a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Configuración <i class="fas fa-angle-right"></i></a>
                     <ul>
                         <li><a>  </a></li>
                         <li style="width: 110px;"><a href="{{ url_for('rolABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-users"></i> Roles <i class="fas fa-angle-right"></i> </a></li>
-                        <!-- <li><a href="#">Servicio B</a></li>
-                        <li><a href="#">Servicio C</a></li> -->
                     </ul>
                 </li>
             </ul>
         </nav>
-
+ -->
         <a href="#" class="list-group-item list-group-item-action bg-light"></a>
         <!--<a href="#" class="list-group-item list-group-item-action bg-light">----</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">----</a>
