Se agregar el campo FECHA a la tabla COMPRA de la bbdd y a su modelo, para poder generar los reportes de ventas filtrando fechas

--- a/App/templates/admin/administracion.html
+++ b/App/templates/admin/administracion.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="d-flex" id="wrapper">
-        {% include 'navbars/sidebar_config.html' %}
+        {% include 'navbars/sidebar_admin.html' %}
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}
 
