--- a/App/templates/navbars/sidebar_admin.html
+++ b/App/templates/navbars/sidebar_admin.html
@@ -39,6 +39,6 @@
         <a href="{{ url_for('rolABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-users"></i> Gestionar roles <i class="fas fa-angle-right"></i> </a>
         <a href="{{ url_for('gestionarUsuarios') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Gestionar usuarios <i class="fas fa-angle-right"></i> </a>
         <a href="{{ url_for('gestionarVentas') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-shopping-cart"></i> Gestionar ventas <i class="fas fa-angle-right"></i></a>
-        
+        <a href="{{ url_for('reportes') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-info"></i> Reportes <i class="fas fa-angle-right"></i></a>
     </div>
 </div>
