--- a/App/templates/navbars/sidebar.html
+++ b/App/templates/navbars/sidebar.html
@@ -61,6 +61,7 @@
         <!--</li>-->
         <a href="{{ url_for('comboABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-layer-group"></i> Combos <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('ventas') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-shopping-cart"></i> Ventas <i class="fas fa-angle-right"></i></a>
+        <a href="{{ url_for('manual_vendedor') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-book"></i> Manual de usuario <i class="fas fa-angle-right"></i></a>
         <a href="{{ url_for('administracion') }}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-cog"></i> Administración <i class="fas fa-angle-right"></i></a>
         
         <!-- <nav>
